Fix issue of white space in sitelinkgroupview heading
This is an alternative proposal to I5fb924e and
I92aa716e2545103b7a7f3a6dcbb684d6d856cd2b.

Bug: T92431

--- a/view/resources/jquery/wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
+++ b/view/resources/jquery/wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
@@ -27,7 +27,6 @@
 
 .wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-container {
 	background-color: #FFFFFF;
-	display: table-row;
 }
 
 .wikibase-sitelinkgroupview.wb-edit .wikibase-sitelinkgroupview-heading-container {
@@ -35,13 +34,13 @@
 }
 
 .wikibase-sitelinkgroupview h2 {
-	display: table-cell;
+	display: inline;
 	float: none;
 	width: auto;
 }
 
 .wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-container > .wikibase-toolbar-container {
-	display: table-cell;
+	display: inline;
 	position: static;
 	padding-left: 0.5em;
 	width: auto;
